# mega-sena-predictor

./: .gitignore  Procfile  README.md  data_acquisition.py  mega.csv  megasena_historico_limpo.csv  predictor.py  pyproject.toml
.github/workflows/: run_predictor.yml
